commit de seguranca

--- a/Scripts/Database/scripts_bd/icc.ipynb
+++ b/Scripts/Database/scripts_bd/icc.ipynb
@@ -161,6 +161,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'credit.sent': {$exists: true}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
